--- a/style.css
+++ b/style.css
@@ -5,14 +5,51 @@
 
 html,
 body {
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
+#language-btt {
+	box-shadow:inset 0px 1px 3px 0px #91b8b3;
+  height: 50px;
+	background:linear-gradient(to bottom, #2c3e50 5%, #2c3e50 100%);
+	background-color: #2c3e50;
+	border-radius: 2px;
+	border:1px solid black;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:11px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #2b665e;
+}
+
+#language-btt:hover {
+  background: rgb(80, 144, 155);
+}
+
+#language-btt:active {
+	position:relative;
+	top:1px;
+}
+
+.logo-container{
+  display: flex;
+  align-items: center;
+}
+
+.logo-container .logo{
+  width: 20px;
+  margin-left: 5px;
+}
+
 #container {
   display: flex;
-  /* background-color: black; */
   background-color: #2c3e50;
   height: 100%;
   align-items: center;
@@ -28,7 +65,6 @@ body {
 }
 
 header {
-  /* border-bottom: 1px solid rgb(58, 58, 60); */
   border-bottom: 1px solid white;
 }
 
@@ -59,11 +95,10 @@ header {
 }
 
 .square {
-  /* border: 2px solid rgb(58, 58, 60); */
   border: 2px solid white;
   min-width: 60px;
   min-height: 60px;
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold;
   color: gainsboro;
   text-transform: uppercase;
@@ -93,7 +128,6 @@ header {
   height: 58px;
   cursor: pointer;
   background-color: rgb(129, 131, 132);
-  /* color: rgb(215, 218, 220); */
   color: white;
   flex-grow: 1;
   text-transform: uppercase;
@@ -101,6 +135,10 @@ header {
   border-radius: 4px;
   user-select: none;
   min-width: 45px;
+}
+
+.keyboard-row button:hover{
+  background-color: #3a3a3c;
 }
 
 .keyboard-row button.wide-button {
@@ -111,38 +149,36 @@ header {
   flex-grow: 0.5;
 }
 
-
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  transition: 1s;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4); 
 }
 
-/* Modal Content/Box */
 .modal-content {
-  background-color: #d8d8d8;
-  margin: 15% auto; /* 15% from the top and centered */
+  text-align: center;
+  background-color: #f6f6f6;
+  margin: 15% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 30%; /* Could be more or less, depending on screen size */
+  width: 30%;
   border-radius: 10px;
 }
 
 .modal-content > p {
   text-align: center;
   font-size: 30px;
+  font-weight: 900;
   color: #538d4e;
 }
 
-/* The Close Button */
 .close {
   color: #aaa;
   float: right;
@@ -155,4 +191,29 @@ header {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal-content #play-again-btt{
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color: black;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:6px 24px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.modal-content #play-again-btt:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.modal-content #play-again-btt {
+	position:relative;
+	top:1px;
 }
